2009-07-04 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.1-ooo310_m15-1 :
	new snapshot
	rebuild with lowered compiler optimizations
	http://bugs.archlinux.org/task/15290

2009-07-03 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.1-ooo310_m14-2 :
        rebuild for new xulrunner, added buildfix                

2009-06-29 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.1-ooo310_m14-1 :
        next snapshot
	
2009-06-13 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.1-ooo310_m13-1 :
        next snapshot

2009-06-03 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.1-ooo310_m12-1 :
        next snapshot
	- build for icu 4.2
	- add gcc4.4 fix
	- add glibc 2.10.1 fix

2009-04-04 Andreas Radke <andyrtr at archlinux.org>

        * 3.1.0-ooo310_m9-1 :
        next snapshot
	=RC1

openoffice-base-beta 3.1.0-ooo310_m8-1
- next snapshot

openoffice-base-beta 3.1.0-ooo310_m7-1
- next snapshot
- add libxtst dep

openoffice-base-beta 3.1.0-ooo310_m6-1
- next snapshot

openoffice-base-beta 3.1.0-ooo310_m5-1
- next snapshot
- add dep on desktop-file-utils
- add note about ttf pkg

openoffice-base-beta 3.1.0-ooo310_m4-1
- next snapshot

openoffice-base-beta 3.1.0-ooo310_m3-1
- next snapshot on the way to 3.1

openoffice-base-beta 3.1.0-ooo310_m2-1
- next snapshot on the way to 3.1

openoffice-base-beta 3.1.0-ooo310_m1-1
- first snapshot on the way to 3.1
  branched from DEV300_m40

openoffice-base-beta 3.0.1-ooo300_m15-1
- next snapshot = 3.0.1rc2
- modify install msg
- build with stlport for i686 and
  without for x86_64

openoffice-base-beta 3.0.1-ooo300_m14-1
- 3.0.1rc1
- fix high cpu load in file dialog FS #11710

openoffice-base-beta 3.0-ooo300_m6-1
- build with system_hsqldb.diff
- slightly modify dependencies
- make dict deployement invisible
- fix build with new openjdk6 with rhino
- make sure /opt is clean after pkg removement
- fix http://qa.openoffice.org/issues/show_bug.cgi?id=93391
  took a diff against dev300_m31
