@@ -1,3 +1,12 @@
+2009-08-01 Andreas Radke <andyrtr at archlinux.org>
+
+        * 3.1.1-ooo310_m17-1 :
+	- new snapshot
+	- backup sofficerc file to fix
+	  http://bugs.archlinux.org/task/15161
+	- move all files to /usr/lib
+	- add startcenter menu entry, drop templates entry	
+
 2009-07-04 Andreas Radke <andyrtr at archlinux.org>
 
         * 3.1.1-ooo310_m15-1 :
